--- a/index.html
+++ b/index.html
@@ -11,39 +11,64 @@
       color: #f5f5f5;
       margin: 0;
       padding: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
+
     header {
       text-align: center;
-      padding: 2rem 1rem 1rem;
+      padding: 1.5rem;
+      background: #111;
+      box-shadow: 0 0 10px #000;
     }
+
     header h1 {
       font-size: 2.5rem;
       color: #00ff9d;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.3rem;
     }
+
     header p {
       color: #ccc;
       font-size: 1.1rem;
     }
+
     main {
-      max-width: 1100px;
-      margin: 0 auto;
+      flex: 1;
+      display: grid;
+      grid-template-columns: 280px 1fr;
+      gap: 1rem;
       padding: 1rem;
+      max-width: 1400px;
+      margin: 0 auto;
+      width: 100%;
     }
-    .filtros {
+
+    aside {
       background: #1a1a1a;
       padding: 1rem;
       border-radius: 10px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 1rem;
-      margin-bottom: 2rem;
+      height: fit-content;
+      position: sticky;
+      top: 1rem;
     }
+
+    aside h2 {
+      color: #00ff9d;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+
     label {
       display: block;
-      margin-bottom: 0.3rem;
+      margin-top: 0.7rem;
+      margin-bottom: 0.2rem;
       color: #00ff9d;
+      font-weight: bold;
+      font-size: 0.9rem;
     }
+
     select, input[type="range"], input[type="text"] {
       width: 100%;
       padding: 0.5rem;
@@ -52,45 +77,62 @@
       background: #222;
       color: #fff;
     }
+
     .barra-valor {
       display: flex;
       justify-content: space-between;
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       color: #aaa;
     }
+
+    .orden {
+      margin-top: 1rem;
+      text-align: center;
+    }
+
     .catalogo {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.5rem;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1rem;
     }
+
     .juego {
       background: #1a1a1a;
       border-radius: 12px;
       padding: 1rem;
       box-shadow: 0 0 10px #000;
-      transition: transform 0.2s;
+      transition: transform 0.2s, box-shadow 0.2s;
     }
+
     .juego:hover {
       transform: scale(1.03);
+      box-shadow: 0 0 15px #00ff9d44;
     }
+
     .juego img {
       width: 100%;
       border-radius: 10px;
     }
+
     .juego h3 {
       color: #00ff9d;
       margin-top: 0.5rem;
+      font-size: 1.1rem;
     }
+
     .juego p {
       color: #ccc;
       font-size: 0.9rem;
+      margin: 0.3rem 0;
     }
-    .orden {
-      text-align: right;
-      margin-bottom: 1rem;
-    }
-    .orden select {
-      width: auto;
+
+    @media (max-width: 850px) {
+      main {
+        grid-template-columns: 1fr;
+      }
+      aside {
+        position: relative;
+      }
     }
   </style>
 </head>
@@ -101,95 +143,87 @@
   </header>
 
   <main>
-    <section class="filtros">
-      <div>
-        <label for="buscar">🔎 Buscar por nombre:</label>
-        <input type="text" id="buscar" placeholder="Escribe el nombre...">
-      </div>
+    <aside>
+      <h2>🔧 Filtros</h2>
 
-      <div>
-        <label for="genero">🎭 Género:</label>
-        <select id="genero">
-          <option value="">Todos</option>
-          <option>Acción</option>
-          <option>Arcade</option>
-          <option>Aventura</option>
-          <option>Carreras</option>
-          <option>Casual</option>
-          <option>Deporte</option>
-          <option>Disparos</option>
-          <option>Estrategia</option>
-          <option>Familia</option>
-          <option>Investigación</option>
-          <option>Lucha</option>
-          <option>Rol</option>
-          <option>Plataformas</option>
-          <option>RPG</option>
-          <option>Simulación</option>
-          <option>Terror</option>
-        </select>
-      </div>
+      <label for="buscar">🔎 Buscar por nombre:</label>
+      <input type="text" id="buscar" placeholder="Escribe el nombre...">
 
-      <div>
-        <label for="precio">💰 Precio:</label>
-        <select id="precio">
-          <option value="">Todos</option>
-          <option value="Gratis">Gratis</option>
-          <option value="0-5">0-5 €</option>
-          <option value="5-10">5-10 €</option>
-          <option value="10-20">10-20 €</option>
-          <option value="20-30">20-30 €</option>
-          <option value="30-40">30-40 €</option>
-          <option value="40-50">40-50 €</option>
-          <option value="50-60">50-60 €</option>
-          <option value="60-70">60-70 €</option>
-          <option value="70-80">70-80 €</option>
-          <option value="+80">+80 €</option>
-        </select>
-      </div>
-
-      <div>
-        <label for="duracion">⏱️ Duración (horas):</label>
-        <select id="duracion">
-          <option value="">Todas</option>
-          <option>0-5</option>
-          <option>5-10</option>
-          <option>10-20</option>
-          <option>20-30</option>
-          <option>30-40</option>
-          <option>40-50</option>
-          <option>50-60</option>
-          <option>60-70</option>
-          <option>70-80</option>
-          <option>80-100</option>
-          <option>+100</option>
-        </select>
-      </div>
-
-      <div>
-        <label for="valoracion">⭐ Valoración mínima (0–5):</label>
-        <input type="range" id="valoracion" min="0" max="5" step="0.1" value="0">
-        <div class="barra-valor">
-          <span>0.0</span><span>5.0</span>
-        </div>
-      </div>
-    </section>
-
-    <div class="orden">
-      <label for="ordenar">Ordenar por:</label>
-      <select id="ordenar">
-        <option value="">Sin orden</option>
-        <option value="nombre-asc">Nombre A–Z</option>
-        <option value="nombre-desc">Nombre Z–A</option>
-        <option value="valoracion-asc">Valoración ↑</option>
-        <option value="valoracion-desc">Valoración ↓</option>
-        <option value="precio-asc">Precio ↑</option>
-        <option value="precio-desc">Precio ↓</option>
+      <label for="genero">🎭 Género:</label>
+      <select id="genero">
+        <option value="">Todos</option>
+        <option>Acción</option>
+        <option>Arcade</option>
+        <option>Aventura</option>
+        <option>Carreras</option>
+        <option>Casual</option>
+        <option>Deporte</option>
+        <option>Disparos</option>
+        <option>Estrategia</option>
+        <option>Familia</option>
+        <option>Investigación</option>
+        <option>Lucha</option>
+        <option>Rol</option>
+        <option>Plataformas</option>
+        <option>RPG</option>
+        <option>Simulación</option>
+        <option>Terror</option>
       </select>
-    </div>
+
+      <label for="precio">💰 Precio:</label>
+      <select id="precio">
+        <option value="">Todos</option>
+        <option value="Gratis">Gratis</option>
+        <option value="0-5">0-5 €</option>
+        <option value="5-10">5-10 €</option>
+        <option value="10-20">10-20 €</option>
+        <option value="20-30">20-30 €</option>
+        <option value="30-40">30-40 €</option>
+        <option value="40-50">40-50 €</option>
+        <option value="50-60">50-60 €</option>
+        <option value="60-70">60-70 €</option>
+        <option value="70-80">70-80 €</option>
+        <option value="+80">+80 €</option>
+      </select>
+
+      <label for="duracion">⏱️ Duración (horas):</label>
+      <select id="duracion">
+        <option value="">Todas</option>
+        <option>0-5</option>
+        <option>5-10</option>
+        <option>10-20</option>
+        <option>20-30</option>
+        <option>30-40</option>
+        <option>40-50</option>
+        <option>50-60</option>
+        <option>60-70</option>
+        <option>70-80</option>
+        <option>80-100</option>
+        <option>+100</option>
+      </select>
+
+      <label for="valoracion">⭐ Valoración mínima:</label>
+      <input type="range" id="valoracion" min="0" max="5" step="0.1" value="0">
+      <div class="barra-valor">
+        <span>0.0</span><span>5.0</span>
+      </div>
+
+      <div class="orden">
+        <label for="ordenar">⚙️ Ordenar por:</label>
+        <select id="ordenar">
+          <option value="">Sin orden</option>
+          <option value="nombre-asc">Nombre A–Z</option>
+          <option value="nombre-desc">Nombre Z–A</option>
+          <option value="valoracion-asc">Valoración ↑</option>
+          <option value="valoracion-desc">Valoración ↓</option>
+          <option value="precio-asc">Precio ↑</option>
+          <option value="precio-desc">Precio ↓</option>
+        </select>
+      </div>
+    </aside>
 
     <section class="catalogo" id="catalogo">
-      <!-- Los videojuegos aparecerán aquí -->
+      <!-- Juegos generados aquí -->
     </section>
   </main>
 
@@ -215,7 +249,6 @@
     function filtrarYOrdenar() {
       let lista = [...juegos];
 
-      // FILTROS
       const genero = filtros.genero.value;
       const precio = filtros.precio.value;
       const duracion = filtros.duracion.value;
@@ -241,7 +274,6 @@
       if (valoracion > 0) lista = lista.filter(j => j.valoracion >= valoracion);
       if (busqueda) lista = lista.filter(j => j.nombre.toLowerCase().includes(busqueda));
 
-      // ORDEN
       const orden = filtros.ordenar.value;
       if (orden === "nombre-asc") lista.sort((a, b) => a.nombre.localeCompare(b.nombre));
       if (orden === "nombre-desc") lista.sort((a, b) => b.nombre.localeCompare(a.nombre));
